--- a/2_task/src/Person/Person.css
+++ b/2_task/src/Person/Person.css
@@ -3,7 +3,7 @@
     height: 100px;
     background-color: navy;
     color: white;
-    padding: 3rem;
+    padding-left: 2rem;
     margin: 1rem;
     font-size: 1.5rem;
     border: 10px solid magenta ;
