--- a/5_speedtest/src/index.css
+++ b/5_speedtest/src/index.css
@@ -1,13 +1,26 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
+
+/* * {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+} */
+
+body {
+  background-image: linear-gradient(to top, #ff9de5, #daacff, #adbbff, #81c7ff, #61cfff);
+  height: 100vh;
+  width: 100%;
+  font-family: 'Luckiest Guy', sans-serif;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  font-family: 'Luckiest Guy', sans-serif;
+  font-size: 1rem;
+  height: 3rem;
+  padding: 0 1rem;
+  margin: 1rem;
+  border: none;
+  border-radius: 5px;
+  background: #ff9de5;
 }
