--- a/5_speedtest/src/index.css
+++ b/5_speedtest/src/index.css
@@ -22,5 +22,6 @@ button {
   margin: 1rem;
   border: none;
   border-radius: 5px;
-  background: #ff9de5;
+  background: #ca66af;
+  cursor: pointer;
 }
