--- a/5_speedtest/src/index.css
+++ b/5_speedtest/src/index.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
 
-/* * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-} */
+}
+
+html {
+  height: 100vh;
+  width: 100vw;;
+}
 
 body {
   background-image: linear-gradient(to top, #ff9de5, #daacff, #adbbff, #81c7ff, #61cfff);
@@ -12,16 +17,4 @@ body {
   width: 100%;
   font-family: 'Luckiest Guy', sans-serif;
   text-align: center;
-}
-
-button {
-  font-family: 'Luckiest Guy', sans-serif;
-  font-size: 1rem;
-  height: 3rem;
-  padding: 0 1rem;
-  margin: 1rem;
-  border: none;
-  border-radius: 5px;
-  background: #ca66af;
-  cursor: pointer;
 }
