Add showing game over screen, missed clicks count, speed getting faster

--- a/5_speedtest/src/index.css
+++ b/5_speedtest/src/index.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  background-image: linear-gradient(to top, #ff9de5, #daacff, #adbbff, #81c7ff, #61cfff);
+  background-image: linear-gradient(to top, #834400, #766808, #608739, #3ea373, #00bab2, #00c3cd, #00cbe7, #2ed2ff, #2ed2ff, #2ed2ff, #2ed2ff, #2ed2ff);
   height: 100vh;
   width: 100%;
   font-family: 'Luckiest Guy', sans-serif;
