--- a/5_speedtest/src/GameOver/GameOver.css
+++ b/5_speedtest/src/GameOver/GameOver.css
@@ -2,7 +2,7 @@
     width: 100vw;
     height: 100vh;
     z-index: 100;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.747);
