--- a/5_speedtest/src/App.css
+++ b/5_speedtest/src/App.css
@@ -5,7 +5,7 @@ button {
     padding: 0 1rem;
     border: none;
     border-radius: 5px;
-    background: #ca66af;
+    background: #c99156;
     cursor: pointer;
   }
 
