--- a/6_news_list/src/Post/Post.css
+++ b/6_news_list/src/Post/Post.css
@@ -12,3 +12,10 @@
     box-shadow: 5px 5px 20px gray;
     padding: 1rem;
 }
+
+.news-card img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover; 
+    border-radius: 5px;
+}
