--- a/6_news_list/src/Post/Post.css
+++ b/6_news_list/src/Post/Post.css
@@ -1,16 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Permanent+Marker&display=swap');
+
+body {
+    font-family: 'Acme', sans-serif;
+    font-size: 1.3rem;
+    line-height: 2rem;
+}
+
+/* NEWS CARDS */
+
 .news-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: flex-start;
     grid-gap: 2rem;
-    margin: 2rem;
+    margin: 3rem;
 }
 
 .news-card {
     background: rgb(253, 239, 173);
     border-radius: 5px;
     box-shadow: 5px 5px 20px gray;
-    padding: 1rem;
+    padding: 1.5rem;
+    transition: all 0.5s;
+}
+
+.news-card:hover {
+    transform: translate(-10px,-10px);
+    box-shadow: 15px 15px 20px gray;
 }
 
 .news-card img {
@@ -18,4 +34,50 @@
     height: 250px;
     object-fit: cover; 
     border-radius: 5px;
+}
+
+.news-card h2, 
+.news-card h2 + p {
+    font-family: 'Permanent Marker', sans-serif;
+    text-align: center;
+}
+
+.news-card h2 {
+    font-size: 2rem;
+    line-height: 2.5rem;
+}
+
+/* BUTTONS */
+
+button {
+    padding: 0.4rem;
+    font-family: 'Acme', sans-serif;
+    font-size: 1.3rem;
+    background: rgb(153, 109, 59, 0.3);
+    border: 3px solid rgb(153, 109, 59);
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+button:hover {
+    background: rgb(153, 109, 59, 0.7);
+}
+
+/* LIKE COUNTER AND ITS BUTTONS */
+
+.like-grid {
+    width: 40%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 30px 1fr;
+    justify-items: center;
+    align-items: center;
+    justify-content: center;
+}
+
+/* REMOVE BUTTON */
+
+.remove-btn {
+    float: right;
 }
