--- a/5_speedtest/src/index.css
+++ b/5_speedtest/src/index.css
@@ -8,7 +8,8 @@
 
 html {
   height: 100vh;
-  width: 100vw;;
+  width: 100vw;
+  /* cursor: url('/assets/coyote-cursor.png'), auto; */
 }
 
 body {
@@ -17,6 +18,8 @@ body {
   width: 100%;
   font-family: 'Luckiest Guy', sans-serif;
   text-align: center;
+  font-size: 1.5rem;
+  line-height: 2.5em;
 }
 
 #root {
