--- a/8_routing/src/About/About.css
+++ b/8_routing/src/About/About.css
@@ -1,6 +1,6 @@
-
 .about-grid {
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 3fr;
+    height: 100%;
 }
 
 .about-grid img {
@@ -8,3 +8,7 @@
     height: 100%;
     object-fit: cover;
 }
+.about-content {
+    padding: 2rem;
+    align-self: flex-start;
+} 
