--- a/8_routing/src/App.css
+++ b/8_routing/src/App.css
@@ -7,11 +7,11 @@
 body {
   height: 100vh;
   width: 100vw;
-  background: peachpuff;
+  background: rgb(196, 184, 173);
 }
 
 main {
-  height: calc(100vh - 3rem);
+  height: calc(100vh - 4rem);
 }
 
 p {
